; ModuleID = '/home/carl/AnghaBench/vlc/modules/control/dbus/extr_dbus_player.c_MarshalPosition.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/control/dbus/extr_dbus_player.c_MarshalPosition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@VLC_TICK_INVALID = common dso_local global i64 0, align 8
@DBUS_TYPE_INT64 = common dso_local global i32 0, align 4
@VLC_ENOMEM = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32*)* @MarshalPosition to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MarshalPosition(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32* @vlc_playlist_GetPlayer(i32 %12)
  store i32* %13, i32** %7, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = call i32 @vlc_player_Lock(i32* %14)
  %16 = load i32*, i32** %7, align 8
  %17 = call i64 @vlc_player_GetTime(i32* %16)
  store i64 %17, i64* %6, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @vlc_player_Unlock(i32* %18)
  %20 = load i64, i64* %6, align 8
  %21 = load i64, i64* @VLC_TICK_INVALID, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %2
  br label %27

24:                                               ; preds = %2
  %25 = load i64, i64* %6, align 8
  %26 = call i64 @US_FROM_VLC_TICK(i64 %25)
  br label %27

27:                                               ; preds = %24, %23
  %28 = phi i64 [ 0, %23 ], [ %26, %24 ]
  store i64 %28, i64* %6, align 8
  %29 = load i32*, i32** %5, align 8
  %30 = load i32, i32* @DBUS_TYPE_INT64, align 4
  %31 = call i32 @dbus_message_iter_append_basic(i32* %29, i32 %30, i64* %6)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %35, label %33

33:                                               ; preds = %27
  %34 = load i32, i32* @VLC_ENOMEM, align 4
  store i32 %34, i32* %3, align 4
  br label %37

35:                                               ; preds = %27
  %36 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %36, i32* %3, align 4
  br label %37

37:                                               ; preds = %35, %33
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i32* @vlc_playlist_GetPlayer(i32) #1

declare dso_local i32 @vlc_player_Lock(i32*) #1

declare dso_local i64 @vlc_player_GetTime(i32*) #1

declare dso_local i32 @vlc_player_Unlock(i32*) #1

declare dso_local i64 @US_FROM_VLC_TICK(i64) #1

declare dso_local i32 @dbus_message_iter_append_basic(i32*, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
